--- a/index1.html
+++ b/index1.html
@@ -91,6 +91,7 @@
 
 <body>
 <h1>Hotel booking</h1>
+<nav class="top-nav"><a href="index.html">&#8592; Back to Instructions</a></nav>
 
 <form id="characterFormLong" action="#" method="post">
 
