--- a/index2.html
+++ b/index2.html
@@ -76,6 +76,7 @@
 </head>
 <body>
 <h1>Hotel Booking</h1>
+<nav class="top-nav"><a href="index.html">&#8592; Back to Instructions</a></nav>
 
 <form id="multiStepForm" action="#" method="post">
 
