add note about writing down duration

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <h1>Hotel Booking Experiment</h1>
   </header>
   <main>
-    <p>This site presents two versions of a hotel booking form. Please read the scenarios below, then complete <strong>both</strong> forms according to the specified details. Afterwards fill in the questionnaire provided at the bottom.</p>
+    <p>This site presents two versions of a hotel booking form. Please read the scenarios below, then complete <strong>both</strong> forms according to the specified details. After clicking send, it will show the duration you spent on the form. Please <strong>write down the duration</strong>. Afterwards fill in the questionnaire provided at the bottom.</p>
 
     <section id="form1-scenario">
       <h2>Scenario for Form 1 (Single Page)</h2>
