--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 
     <section id="form1-scenario">
       <h2>Scenario for Form 1 (Single Page)</h2>
+      <p>Write down the details somewhere so you can refer to them while filling out the form:</p>
       <pre>Book a hotel from RIU chain in Oslo for the dates 11.02–15.02.2026.
 Book a twin room without a sea view on the top floor.
 Food: non-vegetarian full board option.
@@ -40,6 +41,7 @@ Personal data: Jon Johanssen, d.o.b 14.01.2000, 0864 Oslo.</pre>
 
     <section id="form2-scenario">
       <h2>Scenario for Form 2 (Multi-Step)</h2>
+      <p>Write down the details somewhere so you can refer to them while filling out the form:</p>
       <pre>Book a hotel from the Hilton chain in Sidney for the dates 11.01–16.01.2026.
 Book a single room with a sea view on the 1st floor.
 Food: vegetarian breakfast option.
